--- a/app/src/main/assets/missionConfig.json
+++ b/app/src/main/assets/missionConfig.json
@@ -73,7 +73,7 @@
   },
   "0303" : {
     "title" : "목표지점 이동하기",
-    "message01" : "숫자 2까지 이동후 4로 이동하세요",
+    "message01" : "반복블록을 사용해서 4까지 이동하세요",
     "message02" : "",
     "image" : "mission_dialog_img_0303"
   },
